SET(TARGET_NAME sampleTest)
PROJECT(${TARGET_NAME})

SET(SOURCE_CODE 
main.cpp
)

LIST(APPEND INCLUDE_DIRS
${GTEST_INCLUDE_DIRS}
)

LIST(APPEND LIBRARIES
${GTEST_LIBRARIES}
)

if(WIN32)
else(WIN32)
	LIST(APPEND CMAKE_CXX_FLAGS -std=c++14)
endif(WIN32)

include_directories(${INCLUDE_DIRS})
ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_CODE})
ADD_TEST(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LIBRARIES})

IF(WIN32)
	set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS "/machine:x64")
ENDIF(WIN32)
